RESOLVED FIXED75404
REGRESSION (WebKit2): Safari status text doesn't change when you change the modifier keys without moving the mouse
https://bugs.webkit.org/show_bug.cgi?id=75404
Summary REGRESSION (WebKit2): Safari status text doesn't change when you change the m...
mitz
Reported 2011-12-31 10:37:04 PST
REGRESSION (WebKit2): Safari status text doesn't change when you change the modifier keys without moving the mouse
Attachments
Make WKView monitor flags changed events and send fake mouse moved events in response (3.44 KB, patch)
2011-12-31 10:46 PST, mitz
jhoneycutt: review+
mitz
Comment 1 2011-12-31 10:38:13 PST
mitz
Comment 2 2011-12-31 10:46:30 PST
Created attachment 120829 [details] Make WKView monitor flags changed events and send fake mouse moved events in response
mitz
Comment 3 2011-12-31 12:45:06 PST
Note You need to log in before you can comment on or make changes to this bug.