<rdar://problem/8553040> REGRESSION (WebKit2): Safari status text doesn't change when you change the modifier keys without moving the mouse https://bugs.webkit.org/show_bug.cgi?id=75404

Reviewed by Jon Honeycutt.

* UIProcess/API/mac/WKView.mm:
(-[WKView dealloc]): Remove the flags changed event monitor.
(-[WKView _postFakeMouseMovedEventForFlagsChangedEvent:]): Added. Similarly to
-[WebHTMLView _postFlagsChangedEvent:], creates a mouse moved event and passes it to
-mouseMoved:.
(-[WKView initWithFrame:contextRef:pageGroupRef:]): Create a local event monitor for flags
changed events.



git-svn-id: svn://svn.chromium.org/blink/trunk@103859 bbb929c8-8fbe-4397-9dbb-9b2b20218538